# eadk-discord

./: .bot_config.toml.sample  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  start.sh
.github/workflows/: ci.yml
eadk-discord/: __main__.py
eadk_discord/: __init__.py  __main__.py  bot.py  bot_setup.py  database.py  date_converter.py  dates.py  event.py  fmt.py  history.py  migrate_db.py  state.py
eadk_discord/database/: __init__.py  database.py  event.py  event_errors.py  history.py  state.py
tests/: conftest.py  test_book.py  test_commands.py  test_makeflex.py  test_makeowned.py  test_misc.py  test_unbook.py
