[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eadk_discord"
version = "0.0.1"
description = "A Discord bot the EADK discord server"
authors = [{ name = "albertsgarde", email = "albertsgarde@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["eadk_discord"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements_dev.txt'] }

[tool.pytest.ini_options]
pythonpath = ["eadk_discord"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "W", "N", "B"]
ignore = ["D203", "D213", "F722"]
isort.known-first-party = ["eadk_discord"]
