[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "albertsgarde", email = "albertsgarde@gmail.com"}]
description = "A Discord bot the EADK discord server"
dynamic = ["dependencies", "optional-dependencies"]
license = {file = "LICENSE"}
name = "eadk_discord"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning"
]
pythonpath = ["eadk_discord"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["D203", "D213", "F722"]
select = ["I", "E", "F", "W", "N", "B"]
isort.known-first-party = ["eadk_discord"]

[tool.setuptools]
packages = ["eadk_discord"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}
